--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.9.10"
+    "hono": "^4.9.10",
+    "http-status-codes": "^2.3.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/bun": "latest"
