--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hono": "^4.9.10",
     "http-status-codes": "^2.3.0",
     "pg": "^8.16.3",
+    "pino": "^10.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
