--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "drizzle-orm": "^0.44.6",
     "hono": "^4.9.10",
     "http-status-codes": "^2.3.0",
+    "langchain": "^0.3.35",
+    "llama-cloud-services": "^0.3.8",
     "pg": "^8.16.3",
     "pino": "^10.0.0",
     "zod": "^4.1.12"
