feat: endpoint documents upload RAG

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,8 @@ DB_NAME=yourdbname
 DB_TIMEOUT=30
 DB_DEBUG=false
 
+LANGCHAIN_MODEL=gpt-4o-mini
+OPENAI_API_KEY=
+OPENAI_MAX_TOKEN_OUTPUT=200
+
 LLAMAINDEX_API_KEY=
