feat: endpoint ask chat agent

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ DB_TIMEOUT=30
 DB_DEBUG=false
 
 LANGCHAIN_MODEL=gpt-4o-mini
+LANGCHAIN_EMBEDDING_MODEL=text-embedding-3-small
+
 OPENAI_API_KEY=
 OPENAI_MAX_TOKEN_OUTPUT=200
 
